# theNanGuos_lvzw

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  start.sh
agents/: arrange.py  audio_reference.py  base.py  chat.py  conductor.py  harmony.py  improvisation.py  init.py  lyrics.py  melody.py  mix_review.py  performance.py  prompt_compiler.py  rhythm.py  sound_design.py
app/: api.py  graph.py  memory.py  session_store.py  storage.py
docs/: architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/tests/: workspace.spec.ts
lib/: logging_config.py  prompt.py  score.py  skills.py  suno.py
models/: chat.py  memory.py  project.py  state.py
prompts/: arrange.md  chat.md  conductor.md  harmony.md  improvisation.md  lyrics.md  melody.md  mix_review.md  performance.md  prompt_compiler.md  rhythm.md  sound_design.md
providers/: __init__.py  base.py  kie_suno.py
reports/: .gitignore  SYSUReport.cls  nanguo.tex  nanguo.toc  ref.tex
skills/arrangement-audio-analysis/: SKILL.md
skills/conductor-tool-routing/: SKILL.md
skills/lyrics-reference-audio/: SKILL.md
skills/melody-demo-audio/: SKILL.md
skills/suno-prompt-tool-handoff/: SKILL.md
tests/: test_api.py  test_audio_reference_agent.py  test_graph.py  test_llm.py  test_logging_config.py  test_memory.py  test_provider.py  test_score.py  test_skills.py  test_start_script.py  test_tools_audio.py
tools/: __init__.py  audio.py  demo_audio.py
(+5 files in other folders)
