[project]
name = "theNanGuos"
version = "0.1.0"
description = "A group of agents trying to become the best band ever"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx[socks]>=0.28.1",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
